--- a/pizza.html
+++ b/pizza.html
@@ -27,6 +27,9 @@
 
 <body>
 	
+	<p>Aluno: Vitor Gabriel Paz de Santana</p><br><br>
+	<p>Aprendendo a usar o GithubDesktop</p>
+
 	<h1>Python</h1>
 
 	<p><b>Mussum Ipsum</b>, <big>cacilds vidis</big> litro abertis. <em>Suco de cevadiss</em> deixa as pessoas mais interessantis.Diuretics paradis num copo é motivis de denguis.Sapien in monti palavris qui num significa nadis i pareci latim. <i>Si u mundo</i> <small>tá muito</small> <strong>paradis?</stronsg> <sub>Toma</sub> <sup>um mé</sup> <ins>que</ins> o <del>mundo vai girarzis</del>!</p>
