--- a/pizza.html
+++ b/pizza.html
@@ -9,7 +9,14 @@
 
 	<style type="text/css">
 		
-		p{
+		p {
+
+			color: blue;
+			font-family: 'Arial';
+
+		}
+
+		p#teste{
 
 			color: white;
 			font-size: 14px;
@@ -27,8 +34,10 @@
 
 <body>
 	
-	<p>Aluno: Vitor Gabriel Paz de Santana</p><br><br>
-	<p>Aprendendo a usar o GithubDesktop</p>
+	<h1>Título</h1>
+
+	<p id="teste">Aluno: Vitor Gabriel Paz de Santana</p><br>
+	<p id="teste">Aprendendo a usar o GithubDesktop</p>
 
 	<h1>Python</h1>
 
