--- a/pizza.html
+++ b/pizza.html
@@ -9,10 +9,17 @@
 
 	<style type="text/css">
 		
+		img#img-perfil{
+
+			width: 100px;
+			border-radius: 50px;
+		}
+
 		p {
 
-			color: blue;
+			color: black;
 			font-family: 'Arial';
+			font-size: 12px;
 
 		}
 
@@ -36,7 +43,10 @@
 	
 	<h1>Título</h1>
 
-	<p id="teste">Aluno: Vitor Gabriel Paz de Santana</p><br>
+	<p id="teste">
+		<img id="img-perfil" src="https://avatars.githubusercontent.com/u/101137538?v=4">Vitor Gabriel Paz de Santana
+	</p>
+	
 	<p id="teste">Aprendendo a usar o GithubDesktop</p>
 
 	<h1>Python</h1>
